# JobLens

./: .dockerignore  .env.example  .gitignore  .prettierignore  README.md  docker-compose.yml  eslint.config.mjs  package-lock.json  package.json  playwright.config.ts  tsconfig.base.json
apps/api/: Dockerfile  package.json
apps/api/scripts/: copy-migrations.mjs
apps/api/src/: app.ts  config.ts  server.ts
apps/api/test/: health.test.ts  providers.linkedin.test.ts  schema.db.test.ts
apps/frontend/: Dockerfile  index.html  package.json  tsconfig.app.tsbuildinfo  tsconfig.node.json
apps/frontend/src/: App.tsx  main.tsx  styles.css
apps/worker/: Cargo.toml  Dockerfile
apps/worker/src/: config.rs  db.rs  error.rs  lib.rs  main.rs  scheduler.rs  telemetry.rs  util.rs
apps/worker/src/activities/: claim.rs  log.rs  mod.rs  state.rs
apps/worker/src/ai/: client.rs  enqueue.rs  mod.rs  queue.rs  review.rs
apps/worker/src/handlers/: ai_review.rs  availability.rs  collection.rs  description.rs  dummy.rs  export.rs  mod.rs  model_install.rs
apps/worker/src/http/: health.rs  metrics.rs  mod.rs
apps/worker/src/providers/: mod.rs
apps/worker/src/providers/linkedin/: availability.rs  collection.rs  description.rs  jobs.rs  mod.rs  request.rs  session.rs  text.rs  types.rs
apps/worker/src/tests/: db_integration.rs  mod.rs  unit.rs
docs/: API.md  DEVELOPMENT.md  OPERATIONS.md  PRODUCT_REQUIREMENTS.md  PROVIDERS.md
tests/e2e/: activities.spec.ts  ai-review.spec.ts  app.spec.ts  helpers.ts  jobs.spec.ts  searches.spec.ts  settings-ai.spec.ts
(+114 files in other folders)
